infrastruture/kubernetes/ingress/auth-strip-prefix.yaml
# strip-prefix-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: auth-strip-prefix
  namespace: books-app
spec:
  stripPrefix:
    prefixes:
      - /auth
