infrastruture/kubernetes/ingress/books-strip-prefix.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: books-strip-prefix
  namespace: books-app
spec:
  stripPrefix:
    prefixes:
      - /books
